# google-research

screen2words/: README.md  pyproject.toml
screen2words/src/: create_tf_example_main.py  screen2words_keras_model.py
